@@ -1,3 +1,9 @@
+Thu Jun  7 10:41:05 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htlib/ParsedString.cc (get), htsearch/Display.cc (expandVariables):
+	Use isalnum() instead of isalpha() to allow digits in attribute and
+	variable names, allow '-' in variable names too for consistency.
+
 Wed Jun  6 17:13:49 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htdig/HTML.cc (do_tag): Make parsing of meta robots tag case
